<resources>
    <string name="app_name">Kelembagaan</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Navigation Drawer -->
    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_cari">Cari</string>
    <string name="nav_lapor">Lapor</string>
    <string name="nav_disclaimer">Disclaimer</string>
    <string name="nav_bookmark">Bookmark</string>
    <string name="nav_login">Login</string>
    <string name="nav_keluar">Keluar</string>
    <string name="nav_tentang">Tentang</string>
    <string name="nav_sycron">Sinkronisasi</string>


    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Cari</item>
        <item>Bookmark</item>
        <item>Lapor</item>
        <item>Disclaimer</item>
        <item>Tentang</item>
        <item>Sinkronisasi</item>
    </string-array>
    <string-array name="nav_item_activity_titles_login">
        <item>Dashboard</item>
        <item>Cari</item>
        <item>Bookmark</item>
        <item>Lapor</item>
        <item>Disclaimer</item>
        <item>Tentang</item>
        <item>Sinkronisasi</item>
    </string-array>
    <!-- Splash -->

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">Lanjutkan</string>
    <string name="skip">Abaikan</string>
    <string name="start">Mulai</string>

    <string name="slide_1_title">Kementerian Agama Republik Indonesia</string>
    <string name="slide_1_desc">Aplikasi Kelembagaan Pangkalan Data Pondok Pesantren (PDPP)</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <string name="welcome">Selamat Datang di Aplikasi Kelembagaan Pangkalan Data Pondok Pesantren (PDPP)</string>
    <string name="copyright">Hak Cipta Ditjen Pendis Kemenag RI</string>
    <string name="welcome_detail">Aplikasi ini Berisi 28000 Data Pesantren di Seluruh Indonesia</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="forgot_password_text">Lupa kata sandi? Masukkan email login Anda dibawah ini. Kami akan mengirimkan pesan email beserta tautan kata sandi Anda</string>
    <string name="indeks_integritas">Indeks Integritas</string>
    <string name="izin_operasional">Izin Operasional</string>

    <string name="google_maps_api_key">AIzaSyDr_5-GVAUV9rkQcddoMb2A-tInFuBbVRg</string>

    <string name="koreksi_hiden">Berikan saran, koreksi, komentar atau informasi terkait profil %1$s</string>

    <string name="hideen_pesantren">Masukkan Nama Pesantren, NSPP, Alamat dan Nama Pimpinan Pesantren</string>
    <string name="hidden_madrasah">Masukkan Nama Madrasah, NSM, Alamat, NSPP dan Nama Pesantren</string>

    <string name="about">Aplikasi Kelembagaan merupakan salah satu aplikasi dalam 8 rangkaian aplikasi yang tergabung dalam Pangkalan Data Pondok Pesantren (PDPP). Adapun 7 aplikasi lainnya adalah Kepesantrenan, Kesantrian, Ketenagaan, Kurikulum, Sarana dan Prasarana, KITAS, dan Indeks Integritas.\n\nPDPP merupakan sebuah media informasi terkait pesantren di Indonesia. Sistem ini dikembangkan oleh Sub Direktorat Pendidikan Diniyah dan Pondok Pesantren (Subdit PDPONTREN) Kementrian Agama dengan data perolehan dari Education Management Information System (EMIS) di bawah naungan Direktorat Jendral Pendidikan Islam (PENDIS).\n\nSistem ini diharapakan dapat membantu masyarakat dalam memperoleh informasi dasar terkait lembaga pendidikan dibawah pesantren seluruh Indonesia.
</string>

    <string name="disclaimer">Semua data yang ditampilkan di aplikasi ini berasal dari Education Management Information System (EMIS) Direktorat Jendral Pendidikan Islam, Kementrian Agama Republik Indonesia.\n\nSub Direktorat Pendidikan Diniyah dan Pondok Pesantren selaku pengampu aplikasi tidak menambah, mengubah, dan menghapus data.\n\nData masukan yang terjaring dari fitur masukkan untuk memberikan usulan perubahan dan klarifikasi data akan disampaikan kepada EMIS. Keputusan untuk merespon dan menindak lanjuti masukkan tersebut adalah kewenangan dari EMIS.\n\nApabila ada pihak lain yang ingin memanfaatkan data ini untuk kepentingan tertentu agar mengajukan perijinan terlebih dahulu kepada Kementrian Agama Republik Indonesia.</string>

</resources>
